ros2_ws/log/build_2025-10-12_11-26-39/shopee_main_service/stderr.log
  File "/home/jinhyuk2me/dev_ws/Shopee/ros2_ws/install/shopee_main_service/lib/python3.12/site-packages/shopee_main_service/mock_robot_node.py", line 33
    from shopee_interfaces.srv import (
    ^^^^
SyntaxError: expected 'except' or 'finally' block

